<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="2dp"
        android:background="@color/white"
        app:menu="@menu/bottom_sheet_cancel_heading"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_title"
            android:textSize="@dimen/textHeader"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="50dp"/>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/pad"
        android:layout_marginVertical="20dp"
        android:text="@string/cancel_noti"
        android:textColor="@color/textColor"
        android:textStyle="italic"
        android:textSize="14sp"/>
    <RadioGroup
        android:id="@+id/radGroupCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/pad">
        <RadioButton
            android:id="@+id/radReason1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary"
            android:paddingLeft="8dp"
            android:text="@string/cancel_reason1"
            android:textSize="@dimen/textContent"
            android:textColor="@color/inactive"
            android:gravity="center_vertical"/>
        <RadioButton
            android:id="@+id/radReason2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary"
            android:paddingLeft="8dp"
            android:text="@string/cancel_reason2"
            android:textSize="@dimen/textContent"
            android:textColor="@color/inactive"
            android:gravity="center_vertical"/>
        <RadioButton
            android:id="@+id/radReason3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary"
            android:paddingLeft="8dp"
            android:text="@string/cancel_reason3"
            android:textSize="@dimen/textContent"
            android:textColor="@color/inactive"
            android:gravity="center_vertical"/>
        <RadioButton
            android:id="@+id/radReason4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary"
            android:paddingLeft="8dp"
            android:text="@string/cancel_reason4"
            android:textSize="@dimen/textContent"
            android:textColor="@color/inactive"
            android:gravity="center_vertical"/>
        <RadioButton
            android:id="@+id/radReason5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary"
            android:paddingLeft="8dp"
            android:text="@string/cancel_reason5"
            android:textSize="@dimen/textContent"
            android:textColor="@color/inactive"
            android:gravity="center_vertical"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelConfirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_bg_gradient"
        android:text="@string/cancel_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/textContent"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_gravity="center"/>
</LinearLayout>