<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DietActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/name"
        android:textColor="@color/primary"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/gender"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radNam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/primary"
                        android:checked="true"
                        android:text="@string/boy"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radNu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:buttonTint="@color/primary"
                        android:text="@string/girl"
                        android:textSize="16sp" />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:layout_gravity="center_vertical"

                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtNhapHeigt"
                android:layout_width="140sp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/botron"
                android:gravity="center"
                android:hint="@string/nhapheigt"
                android:inputType="number"
                android:textColor="@color/primary"
                android:textSize="18sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/cm"
                android:textColor="@color/inactive" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/weight"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/edtNhapWeight"
                android:layout_gravity="center"
                android:layout_width="140sp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/botron"
                android:gravity="center"
                android:hint="@string/nhapweight"
                android:inputType="numberSigned"
                android:textColor="@color/primary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/kg"
                android:textColor="@color/inactive" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTinhBMI"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg_gradient"
            android:text="@string/CalculateBMI"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp" />


        <ListView
            android:id="@+id/lvDietProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>