<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_lang"
            android:textColor="@color/primary"
            android:textSize="@dimen/textHeader"
            android:textStyle="bold"
            android:gravity="center"/>
    </androidx.appcompat.widget.Toolbar>
    <RadioGroup
        android:id="@+id/radGroupLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp">
        <RadioButton
            android:id="@+id/radVietNam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/vietnam"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:checked="true"
            android:paddingLeft="10dp"
            android:buttonTint="@color/primary"/>
        <RadioButton
            android:id="@+id/radEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/english"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:buttonTint="@color/primary"/>
        <RadioButton
            android:id="@+id/radJapan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/japan"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:buttonTint="@color/primary"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/lnAddLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="12dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            app:tint="@color/primary"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="14dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_lang"
            android:textColor="@color/textColor"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>