<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--header-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        style="@style/ThemeOverlay.AppCompat.Light"
        app:navigationIcon="@drawable/ic_back_pink"
        app:titleTextColor="@color/white"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:layout_gravity="center"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>
    <!--    end header-->
<ImageView

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/img_delivery"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="60dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_success"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/primary"/>
    <TextView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/madonhang"
        android:gravity="center"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddToPayment"
        android:layout_width="270dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_bg_gradient"
        android:text="@string/see_order_status"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/buttonTextSize"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>
</LinearLayout>