<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="2dp"
        android:background="@color/white"
        android:theme="?attr/actionBarTheme">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_success_title"
        android:textSize="@dimen/textHeader"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginEnd="14dp"/>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/pad"
        android:layout_marginVertical="30dp"
        android:text="@string/cancel_success_noti"
        android:textColor="@color/textColor"
        android:textStyle="italic"
        android:textSize="@dimen/textContent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmSuccess"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/bg_button_gradient"
            android:text="@string/cancel_confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/textContent"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBackHome"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/bg_lightpink"
            android:text="@string/cancel_back_home"
            android:textColor="@color/primary"
            android:textSize="@dimen/textContent"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>